# openedx-vai

./: .gitignore  CLAUDE.md  MANIFEST.in  deploy-theme.sh  pyproject.toml  setup.py
tutorvai/: plugin.py
tutorvai/patches/: mfe-env-config-buildtime-definitions  vai-account-css.txt  vai-authn-script.txt  vai-authoring-script.txt  vai-dashboard-css.txt  vai-dashboard-script.txt  vai-discussions-script.txt  vai-learning-ai-button.txt  vai-learning-script.txt  vai-profile-css.txt
tutorvai/templates/vai/lms/static/js/: dark-theme.js  program-enroll-redirect.js
tutorvai/templates/vai/lms/static/sass/certificates/: _certificate.scss
tutorvai/templates/vai/lms/static/sass/courseware/: _about.scss  _bookmarks.scss  _discover.scss
tutorvai/templates/vai/lms/static/sass/extra/: _footer.scss  _header.scss
tutorvai/templates/vai/lms/static/sass/home/: _home.scss
tutorvai/templates/vai/lms/templates/: course.html  footer.html  index.html  index_overlay.html
tutorvai/templates/vai/lms/templates/courseware/: course_about.html  course_about_sidebar_header.html  courses.html
tutorvai/templates/vai/lms/templates/discovery/: course_card.underscore
tutorvai/templates/vai/lms/templates/header/: brand.html  navbar-logo-header.html  navbar-not-authenticated.html  user_dropdown.html
tutorvai/templates/vai/lms/templates/learner_dashboard/: program_card.underscore  programs_fragment.html
tutorvai/templates/vai/lms/templates/static_templates/: about.html  blog.html  contact.html  donate.html  help.html  privacy.html  tos.html
tutorvai/templates/vai/tasks/: init.sh
(+8 files in other folders)
